--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
 
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
